--- a/src/scss/_body.scss
+++ b/src/scss/_body.scss
@@ -14,9 +14,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-.hidden {
-  visibility: hidden;
-}
+// .hidden {
+//   visibility: hidden;
+// }
 $my_var: red;
 .app {
   height: 200px;
