--- a/src/components/WebChat/_webchat.scss
+++ b/src/components/WebChat/_webchat.scss
@@ -1,49 +1,71 @@
 .chat-container__ewc-class {
-  overflow: hidden;
-  animation: fadeIn 0.4s ease-in-out;
-  @keyframes fadeIn {
-    from {
-      opacity: 0;
-    }
-    to {
-      opacity: 1;
-    }
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-size: 100%;
+    scroll-behavior: smooth;
   }
-  z-index: 1059;
-  position: absolute;
-  bottom: 1.25rem;
-  right: 1.25rem;
-  width: 21.25rem;
-  height: 31.25rem;
-  min-width: 15.625rem;
-  min-height: 15.625rem;
-  box-shadow: 0 0rem 0.625rem -0.0625rem rgba(0, 0, 0, 0.683);
-  border-radius: 0.625rem;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  margin: 0;
   padding: 0;
-  display: flex;
-  overflow: hidden;
-  flex-direction: column;
-  align-items: center;
-  background: $main;
+  box-sizing: border-box;
+  font-size: 100%;
+  scroll-behavior: smooth;
+  
+overflow: hidden;
+animation: fadeIn 0.4s ease-in-out;
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+z-index: 1059;
+position: absolute;
+bottom: 1.25rem;
+right: 1.25rem;
+width: 21.25rem;
+height: 31.25rem;
+min-width: 15.625rem;
+min-height: 15.625rem;
+box-shadow: 0 0rem 0.625rem -0.0625rem rgba(0, 0, 0, 0.683);
+border-radius: 0.625rem;
+padding: 0;
+display: flex;
+overflow: hidden;
+flex-direction: column;
+align-items: center;
+background: $main;
 }
 
 .footer__ewc-class {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 0.5rem;
-  .footer-button {
-    font-family: 'Roboto', sans-serif;
-    color: $gray-9;
-    font-size: 0.75rem;
-    text-align: center;
-    background-color: transparent;
-    border: none;
-    text-decoration: none;
-    &:hover {
-      transition: 0.3s ease all;
-      text-decoration: underline;
-      cursor: pointer;
-    }
+display: flex;
+align-items: center;
+justify-content: center;
+height: 0.5rem;
+.footer-button {
+  font-family: 'Roboto', sans-serif;
+  color: $gray-9;
+  font-size: 0.75rem;
+  text-align: center;
+  background-color: transparent;
+  border: none;
+  text-decoration: none;
+  &:hover {
+    transition: 0.3s ease all;
+    text-decoration: underline;
+    cursor: pointer;
   }
+}
+}
+
+.hidden {
+  display: none;
 }
