--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 @import '../src/scss/variables';
-@import '../src/scss/body';
+// @import '../src/scss/body';  esto sobreescribe los estilos de la página padre
 @import '../src/components/WebChat/webchat';
 @import '../src/components/molecules/UploadFiles/uploadFiles';
 @import '../src/components/molecules/AnimationSvg/animation';
