feature/AIL-002, cambio de color

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,7 +1,8 @@
 // BACKGROUND COLORS:
 
 // purple
-$main: #6d5cae;
+$main: #671e75;
+// $main: #6d5cae;
 $main-hover: rgba($main, 0.85);
 
 // gray
